--- a/11_Theme_Switcher/src/index.css
+++ b/11_Theme_Switcher/src/index.css
@@ -1,1 +1,22 @@
 @import "tailwindcss";
+.light {
+  --background-color: white;
+  --text-color: black;
+  --border-color: gray;
+}
+
+/* Dark Theme */
+.dark {
+  --background-color: black;
+  --text-color: white;
+  --border-color: gray;
+}
+
+body {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+.border {
+  border-color: var(--border-color);
+}
